    - Use Class::Load to replace deprecated Class::Mop method (issue #35)
    - Add missing dependency: LWP::Protocol::https (issue #25)
    - Fix OAuth failure for UTF8 params (issue #21)

4.00007 2013-08-12
    - Support for HTTP method PUT (sartak)
    - example improvements (clmh)

4.00006 2013-05-30
    - Spelling error fixed (spazm@github)
    - Added path_suffix parameter to twitter_api_method (sartak)
    - tidy + pod fix (sartak)

4.00005 2013-04-25
    - Added list_ownerships (eleniS no Github)
    - Removed Makefile.PL (cruft - using Module::Build, now)

4.00004
    - Dependecy Net::HTTP fixed in 6.06 (30 second timeout in OAuth requests)

4.00003
    - Fixed URI argument encoding (v1.1 is more stringent)

4.00002 2013-02-23
    - Removed Test::NoWarnings to accommodate HTTP::Request::Common 6.03
    - Added method twitter_error_code to Net::Twitter::Error

4.00001 2013-02-21
    - First general release with Twitter API v1.1 support
    - Twitter::Manual::MigratingToV1_1

4.00000_03 2013-02-19
    - Fixed: needed skip directives for dzil's AutoPrereqs plugin
    - Stripped version numbers---let dzil put them in

4.00000_02 2013-02-19
    - use Dist::Zilla instead of Module::Install

4.00000_01 2013-01-28
    - Added Twitter API version 1.1 support

3.18004 2012-10-15
    - Allow extra parameters to get_auth*_url methods (this accommodates
      Twitter's optional force_login and screen_name parameters to those
      endpoints.

3.18003 2012-06-27
    - Use path statuses/mentions, not statuses/replies

3.18002 2012-04-24
    - added API method subscriptions; list_subscriptions is now
      all_subscriptions with alias list_subscriptions
    - deprecated TwitterVision API support
    - added API method members_destroy_all with alias remove_list_members
    - added deprecation warning for 'trends'; calls trends_location(1), instead

3.18001 2011-09-29
    - fixed: AutoCursor:
        - no behavior change when user passes "cursor" arg